--- a/springaifront/index.html
+++ b/springaifront/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="top-bar">
+        <button id="theme-toggle">🌙</button>
+    </div>
+    <div id="sidebar">
+        <div id="session-actions">
+            <button id="new-session-btn">新建会话</button>
+            <button id="clear-all-btn">清空所有会话</button>
+        </div>
+        <ul id="session-list"></ul>
+    </div>
     <div id="chat-container">
         <div id="chat-box"></div>
         <div id="input-container">
